[package]
name = "pallet-parachain-template"
authors = ["Anonymous"]
description = "FRAME pallet template for defining custom runtime logic."
version = "0.1.0"
license = "Unlicense"
homepage = "https://substrate.io"
repository.workspace = true
edition.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"], default-features = false }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }

# Substrate
frame-benchmarking = { path = "../../../../substrate/frame/benchmarking", default-features = false, optional = true }
frame-support = { path = "../../../../substrate/frame/support", default-features = false }
frame-system = { path = "../../../../substrate/frame/system", default-features = false }
sp-core = { path = "../../../../substrate/primitives/core", default-features = false }
sp-io = { path = "../../../../substrate/primitives/io", default-features = false }
sp-runtime = { path = "../../../../substrate/primitives/runtime", default-features = false }
log = { version = "0.4.17", default-features = false }
tokio = { version = "1", default-features = false, optional = true }
kurtosis-sdk = { version = "0.86.4" , optional = true }
tonic = { version = "0.9.2", default-features = false, optional = true }
futures = { version = "0.3.28", default-features = false }
sp-externalities = { version = "0.19.0",path = "../../../../substrate/primitives/externalities", default-features = false  }
sp-std = { path = "../../../../substrate/primitives/std",  default-features = false }
sp-runtime-interface = {  default-features = false,  path = "../../../../substrate/primitives/runtime-interface" }
async-trait = "0.1.77"

# Substrate


[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-externalities/std",
	"log/std",
	"tokio",
	"kurtosis-sdk",
	"tonic",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
